--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,15 @@
 body {
     font: 14px "Century Gothic", Futura, sans-serif;
-    margin: 20px;
+    margin: 0;
   }
-  
+
   ol, ul {
     padding-left: 30px;
+  }
+
+  a,a:link,a:hover, a:visited{
+    color: black;
+    text-decoration: none;
   }
   
   .board-row:after {
@@ -48,4 +53,61 @@ body {
   .game-info {
     margin-left: 20px;
   }
+
+/*------------------------------design--------------------------------*/
+  .main{
+    margin: 40px;
+  }
+
+  .header h2{
+    text-align: center;
+    padding: 30px;
+    border: 2px solid pink;
+  }
+
+  .content{
+    max-width: 780px;
+    margin: 0 auto;
+  }
+  .menu {
+    margin-bottom: 80px;
+  }
+  .menu ul{
+    list-style: none;
+    margin: 10px;
+    padding: 0px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    text-align: center;
+  }
+  .menu li{
+    padding: 10px;
+    border-radius: 10px;
+  }.menu li:hover{
+    background-color: rgb(255, 236, 239);
+  }
   
+  .start
+  .introduce img{
+    float: left;
+    margin-right: 20px;
+    opacity: 60%;
+    border-radius: 20px;
+  }.introduce div{
+    padding-top: 30px;
+    text-align: center;
+  }
+
+  .number{
+    list-style: square;
+  }
+  .numberbutton{
+    margin: 5px;
+    border-radius: 5px;
+    background-color: white;
+    border: 1px solid gray;
+  }
+  .numberbutton:focus{
+    outline: 0;
+    background-color: rgb(255, 236, 239);
+  }
