--- a/src/index.css
+++ b/src/index.css
@@ -1,113 +1,158 @@
+/*------------------Global Setting-------------------*/
 body {
-    font: 14px "Century Gothic", Futura, sans-serif;
-    margin: 0;
-  }
+  font: 14px "Century Gothic", Futura, sans-serif;  margin: 0;
+}
 
-  ol, ul {
-    padding-left: 30px;
-  }
+ol, ul {
+  padding-left: 30px;
+}
 
-  a,a:link,a:hover, a:visited{
-    color: black;
-    text-decoration: none;
-  }
-  
-  .board-row:after {
-    clear: both;
-    content: "";
-    display: table;
-  }
-  
-  .status {
-    margin-bottom: 10px;
-  }
-  
-  .square {
-    background: #fff;
-    border: 1px solid #999;
-    float: left;
-    font-size: 24px;
-    font-weight: bold;
-    line-height: 34px;
-    height: 34px;
-    margin-right: -1px;
-    margin-top: -1px;
-    padding: 0;
-    text-align: center;
-    width: 34px;
-  }
-  
-  .square:focus {
-    outline: none;
-  }
-  
-  .kbd-navigation .square:focus {
-    background: #ddd;
-  }
-  
-  .game {
-    display: flex;
-    flex-direction: row;
-  }
-  
-  .game-info {
-    margin-left: 20px;
-  }
+a,a:link,a:hover, a:visited{
+  color: black;
+  text-decoration: none;
+}
+
 
 /*------------------------------design--------------------------------*/
-  .main{
-    margin: 40px;
-  }
+.main{
+  margin: 40px;
+}
 
-  .header h2{
-    text-align: center;
-    padding: 30px;
-    border: 2px solid pink;
-  }
+.header h2{
+  text-align: center;
+  padding: 30px;
+  border: 2px solid pink;
+}
 
-  .content{
-    max-width: 780px;
-    margin: 0 auto;
-  }
-  .menu {
-    margin-bottom: 80px;
-  }
-  .menu ul{
-    list-style: none;
-    margin: 10px;
-    padding: 0px;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    text-align: center;
-  }
-  .menu li{
-    padding: 10px;
-    border-radius: 10px;
-  }.menu li:hover{
-    background-color: rgb(255, 236, 239);
-  }
-  
-  .start
-  .introduce img{
-    float: left;
-    margin-right: 20px;
-    opacity: 60%;
-    border-radius: 20px;
-  }.introduce div{
-    padding-top: 30px;
-    text-align: center;
-  }
+.contents-wrapper{
+  max-width: 800px;
+  margin: 0 auto;
+}
+.menu ul{
+  list-style: none;
+  margin: 10px;
+  padding: 0px;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  text-align: center;
+}.menu li{
+  padding: 10px;
+  border-radius: 10px;
+}.menu li:hover{
+  background-color: rgb(255, 236, 239);
+}
+.contents{
+  margin: 80px 20px;
+}
 
-  .number{
-    list-style: square;
-  }
-  .numberbutton{
-    margin: 5px;
-    border-radius: 5px;
-    background-color: white;
-    border: 1px solid gray;
-  }
-  .numberbutton:focus{
-    outline: 0;
-    background-color: rgb(255, 236, 239);
-  }
+.footer{
+  text-align: center;
+  padding: 20px;
+  border-top: 0.5px solid #999;
+  color: gray;
+}
+
+
+/*------------------------------home part-----------------------------------*/
+.start h4{
+  font-size: 25px;
+  text-align: center;
+}.start {
+  font-size: 20px;
+}
+
+
+/*------------------------------introduce part---------------------------------*/
+.introduce{
+  min-height: 600px;
+  font-size: 20px;
+}.introduce h4{
+  font-size: 25px;
+  text-align: center;
+}
+.introduce img{
+  float: left;
+  margin-right: 20px;
+  opacity: 60%;
+  border-radius: 20px;
+}.introduce div{
+  padding-top: 30px;
+}
+
+
+/*------------------------------community part---------------------------------*/
+.community{
+  font-size: 20px;
+}.community h4{
+  font-size: 25px;
+  text-align: center;
+}
+
+
+/*------------------------------lotto part---------------------------------*/
+.lotto{
+  font-size: 20px;
+}.lotto h4{
+  font-size: 25px;
+  text-align: center;
+}
+
+
+/*--------------------------------game part-------------------------------------*/
+.board-row:after {
+  clear: both;
+  content: "";
+  display: table;
+}
+.status {
+  margin-bottom: 10px;
+}
+.square {
+  background: #fff;
+  border: 1px solid #999;
+  float: left;
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 34px;
+  height: 55px;
+  margin-right: -1px;
+  margin-top: -1px;
+  padding: 0;
+  text-align: center;
+  width: 55px;
+}.square:focus {
+  outline: none;
+}
+.kbd-navigation .square:focus {
+  background: #ddd;
+}
+
+.game{
+  display: flex;
+  flex-direction: row;
+  font-size: 20px;
+}.tic-tac-toe h4{
+  font-size: 25px;
+  text-align: center;
+}
+.game-board{
+  margin: 10px;
+}
+.game-info {
+  margin-left: 20px;
+}
+
+/*------------------game-design------------------*/
+.number{
+  list-style: square;
+}
+.numberbutton{
+  margin: 5px;
+  border-radius: 5px;
+  background-color: white;
+  border: 1px solid gray;
+}
+.numberbutton:focus{
+  outline: 0;
+  background-color: rgb(255, 236, 239);
+}
