--- a/src/index.css
+++ b/src/index.css
@@ -19,13 +19,14 @@ a,a:link,a:hover, a:visited{
 }
 
 .header h2{
+  min-width: 800px;
   text-align: center;
   padding: 30px;
   border: 2px solid pink;
 }
 
 .contents-wrapper{
-  max-width: 800px;
+  width: 800px;
   margin: 0 auto;
 }
 .menu ul{
@@ -33,7 +34,7 @@ a,a:link,a:hover, a:visited{
   margin: 10px;
   padding: 0px;
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   text-align: center;
 }.menu li{
   padding: 10px;
@@ -73,7 +74,7 @@ a,a:link,a:hover, a:visited{
 .introduce img{
   float: left;
   margin-right: 20px;
-  opacity: 60%;
+  opacity: 80%;
   border-radius: 20px;
 }.introduce div{
   padding-top: 30px;
@@ -91,10 +92,56 @@ a,a:link,a:hover, a:visited{
 
 /*------------------------------lotto part---------------------------------*/
 .lotto{
+  height: 350px;
   font-size: 20px;
 }.lotto h4{
   font-size: 25px;
   text-align: center;
+}
+.lotto_number{
+  display: inline-block;
+  position: relative;
+  left: 245px;
+}
+.lotto_bonus{
+  position: relative;
+  left: 590px;
+}
+.lotto_game{
+  padding: 0;
+  display: flex;
+  background-color: aliceblue;
+  border-radius: 30px;
+}.lotto_game li{
+  margin: 20px 15px;
+  list-style: none;
+  line-height: 70px; width: 70px;
+  /*background-color: aqua;*/
+}.lotto_game li:nth-child(7){
+  width: 40px;
+  text-align: center;
+  color: #999;
+  font-size: 40px;
+  background-color: aliceblue;
+}.lotto_game div{
+  margin: 0;
+  border-radius: 50px;
+  text-align: center;
+}
+
+.lotto_button{
+  outline: none;
+  margin-top: 20px;
+  position: relative;
+  left: 45%;
+  height: 50px; width: 100px;
+  padding: 10px;
+  background-color: rgb(190,225, 255) ;
+  border-radius: 10px;
+  border: none;
+}.lotto_button:hover{
+  background-color: rgb(166, 213, 255);
+  color: #fff;
 }
 
 
