--- a/src/index.css
+++ b/src/index.css
@@ -19,14 +19,13 @@ a,a:link,a:hover, a:visited{
 }
 
 .header h2{
-  min-width: 800px;
   text-align: center;
   padding: 30px;
   border: 2px solid pink;
 }
 
 .contents-wrapper{
-  width: 800px;
+  max-width: 800px;
   margin: 0 auto;
 }
 .menu ul{
@@ -65,7 +64,7 @@ a,a:link,a:hover, a:visited{
 
 /*------------------------------introduce part---------------------------------*/
 .introduce{
-  min-height: 600px;
+  min-height: 400px;
   font-size: 20px;
 }.introduce h4{
   font-size: 25px;
@@ -75,6 +74,7 @@ a,a:link,a:hover, a:visited{
   float: left;
   margin-right: 20px;
   border-radius: 20px;
+  width: 300px;
 }.introduce div{
   padding-top: 30px;
 }
@@ -83,16 +83,61 @@ a,a:link,a:hover, a:visited{
 /*------------------------------community part---------------------------------*/
 .community{
   font-size: 20px;
+  text-align: center;
 }.community h4{
   font-size: 25px;
-  text-align: center;
+}
+.community_container{
+  margin: 0 auto;
+  border: 1px solid rgb(99, 99, 99);
+  padding: 0;
+  border-radius: 5px;
+}.community_container h5{
+  border-bottom: 1px solid rgb(99, 99, 99);
+  margin: 0;
+  padding: 10px;
+  font-size: 20px;
+}.community_container div{
+  padding: 30px;
+  font-size: 15px;
+}
+.community_form{
+  margin: 0 auto;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  border: 3px solid black;
+}.community_form h5{
+  font-size: 20px;
+}
+.form-title{
+  width: 79%;
+  height: 40px;
+  margin: 10px;
+}.ck.ck-reset.ck-editor.ck-rounded-corners{
+  width: 80%;
+  margin: 0 auto;
+}.ck.ck-editor__editable:not(.ck-editor__nested-editable) {
+  min-height: 300px;
+  margin-bottom: 30px;
+  font-size: 10px;
+}
+.form-submit{
+  padding: 10px;
+  height: 50px; width: 100px;
+  border: none;
+  background-color: rgb(190,225, 255) ;
+  border-radius: 10px;
+  outline: none;
+}.form-submit:hover{
+  background-color: rgb(166, 213, 255);
+  color: #fff;
 }
 
 
 /*------------------------------lotto part---------------------------------*/
 .lotto{
-  height: 350px;
   font-size: 20px;
+  min-height: 320px;
 }.lotto h4{
   font-size: 25px;
   text-align: center;
@@ -100,11 +145,11 @@ a,a:link,a:hover, a:visited{
 .lotto_number{
   display: inline-block;
   position: relative;
-  left: 245px;
+  left: 35%;
 }
 .lotto_bonus{
   position: relative;
-  left: 590px;
+  left: 75%;
 }
 .lotto_game{
   padding: 0;
